core: var highlighting resolves prefixed variables now