@@ -125,6 +125,7 @@
 									<opt><![CDATA[--add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED]]></opt>
 									<opt><![CDATA[--add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED]]></opt>
 									<opt><![CDATA[--add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED]]></opt>
+									<opt><![CDATA[--add-opens javafx.graphics/javafx.scene=ALL-UNNAMED]]></opt>
 									<opt><![CDATA[--add-opens javafx.graphics/javafx.scene.text=ALL-UNNAMED]]></opt>
 									<opt><![CDATA[--add-opens javafx.graphics/com.sun.javafx.text=ALL-UNNAMED]]></opt>
 									<opt>-Dprism.dirtyopts=false</opt>
