@@ -17,6 +17,7 @@ chmod +x "$BASE_DIR"/jre-linux64/bin/java
 	--add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED \
 	--add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED \
 	--add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED \
+	--add-opens javafx.graphics/javafx.scene=ALL-UNNAMED \
 	--add-opens javafx.graphics/javafx.scene.text=ALL-UNNAMED \
 	--add-opens javafx.graphics/com.sun.javafx.text=ALL-UNNAMED \
 	-Dprism.dirtyopts=false -cp "$BASE_DIR"/plugins/*:"$BASE_DIR"/milkman.jar milkman.MilkmanApplication
