@@ -12,6 +12,7 @@
 	--add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED ^
 	--add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED ^
 	--add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED ^
+	--add-opens javafx.graphics/javafx.scene=ALL-UNNAMED ^
 	--add-opens javafx.graphics/javafx.scene.text=ALL-UNNAMED ^
 	--add-opens javafx.graphics/com.sun.javafx.text=ALL-UNNAMED ^
 	-Dprism.dirtyopts=false -cp plugins\*;milkman.jar milkman.MilkmanApplication
